Adding local minsert.py and update workflow

--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -29,5 +29,6 @@ jobs:
         env:
           STEAM_USER_ID: ${{ secrets.STEAM_USER_ID }}
           STEAM_GAME_ID: ${{ secrets.STEAM_GAME_ID }}
+          PYTHONPATH: $GITHUB_WORKSPACE/scripts/python-requirements
         run: |
           ./scripts/update-vrchours.sh "$GITHUB_WORKSPACE" "$STEAM_USER_ID" "$STEAM_GAME_ID"
