--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -3,7 +3,7 @@ name: Update VRChat Hours
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 6 * * *' # Runs daily at 6:00 UTC
+    - cron: '0 * * * *' # Runs every hour
 
 jobs:
   update-vrchours:
