--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Set up git user
         run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.email "rmckenzi@rpmdp.com"
+          git config --global user.name "Robert McKenzie"
 
       - name: Run update-vrchours.sh
         env:
