--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -1,33 +1,34 @@
-name: Update MyHours Workflow
+name: Update VRChat Hours
 
 on:
   workflow_dispatch:
-    inputs:
-      game_id:
-        description: 'Steam Game ID'
-        required: true
+  schedule:
+    - cron: '0 * * * *' # Runs every hour
 
 jobs:
-  update-hours:
+  update-vrchours:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          if [ -f scripts/requirements.txt ]; then pip install -r scripts/requirements.txt; fi
+
+      - name: Set execute permissions on scripts
+        run: chmod +x scripts/update-vrchours.sh scripts/update-myhours.py
 
       - name: Set up git user
         run: |
-          git config --global user.email "rmckenzi@rpmdp.com"
-          git config --global user.name "Robert McKenzie"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
 
       - name: Set up git remote with PAT
         env:
@@ -35,19 +36,11 @@ jobs:
         run: |
           git remote set-url origin https://x-access-token:${MY_GH_PAT}@github.com/${GITHUB_REPOSITORY}.git
 
-      - name: Create steam_vars.txt from secrets
+      - name: Run update-vrchours.sh
+        env:
+          STEAM_USER_ID: ${{ secrets.STEAM_USER_ID }}
+          STEAM_GAME_ID: ${{ secrets.STEAM_GAME_ID }}
+          PYTHONPATH: $GITHUB_WORKSPACE/scripts/python-requirements
+          GH_TOKEN: ${{ secrets.MY_GH_PAT }}
         run: |
-          echo "STEAM_API_KEY=${{ secrets.STEAM_API_KEY }}" > steam_vars.txt
-          echo "STEAM_ID=${{ secrets.STEAM_USER_ID }}" >> steam_vars.txt
-
-      - name: Run update-myhours-workflow-v2.py
-        run: |
-          python ./M1XZG/scripts/update-myhours-workflow-v2.py ${{ github.event.inputs.game_id }}
-
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md TMP-README.md
-          git commit -m "Update Steam playtime hours"
-          git push
+          ./scripts/update-vrchours-workflow.sh "$GITHUB_WORKSPACE" "$STEAM_USER_ID" "$STEAM_GAME_ID"
