--- a/.github/workflows/update-vrchat-hours-v2.yaml
+++ b/.github/workflows/update-vrchat-hours-v2.yaml
@@ -40,12 +40,4 @@ jobs:
         env:
           STEAM_GAME_ID: ${{ secrets.STEAM_GAME_ID }}
         run: |
-          python scripts/update-myhours-workflow-v2.py $STEAM_GAME_ID
-
-      - name: Commit and push changes
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add README.md TMP-README.md
-          git commit -m "Update Steam playtime hours"
-          git push
+          ./scripts/update-vrchours-workflow-v2.sh "$GITHUB_WORKSPACE" "$STEAM_GAME_ID"
