--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -36,6 +36,12 @@ jobs:
         run: |
           git remote set-url origin https://x-access-token:${MY_GH_PAT}@github.com/${GITHUB_REPOSITORY}.git
 
+      - name: Random delay (up to 30 minutes)
+        run: |
+          SECONDS=$((RANDOM % 900))
+          echo "Sleeping for $SECONDS seconds..."
+          sleep $SECONDS
+
       - name: Run update-vrchours.sh
         env:
           STEAM_USER_ID: ${{ secrets.STEAM_USER_ID }}
