Adding concurrency to prevent mutliples running.

--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -5,6 +5,10 @@ on:
   schedule:
     - cron: '0 * * * *' # Runs every hour
 
+concurrency:
+  group: update-vrchat-hours
+  cancel-in-progress: true
+
 jobs:
   update-vrchours:
     runs-on: ubuntu-latest
