--- a/.github/workflows/update-vrchat-hours-v2.yaml
+++ b/.github/workflows/update-vrchat-hours-v2.yaml
@@ -36,8 +36,10 @@ jobs:
           echo "STEAM_API_KEY=${{ secrets.STEAM_API_KEY }}" > steam_vars.txt
           echo "STEAM_ID=${{ secrets.STEAM_USER_ID }}" >> steam_vars.txt
 
-      - name: Run update-myhours-workflow-v2.py
+      - name: Run update-myhours-workflow-v2.sh
         env:
           STEAM_GAME_ID: ${{ secrets.STEAM_GAME_ID }}
+          STEAM_USER_ID: ${{ secrets.STEAM_USER_ID }}
+          GH_TOKEN: ${{ secrets.MY_GH_PAT }}
         run: |
-          ./scripts/update-vrchours-workflow-v2.sh "$GITHUB_WORKSPACE" "$STEAM_GAME_ID"
+          ./scripts/update-vrchours-workflow-v2.sh "$GITHUB_WORKSPACE" "$STEAM_USER_ID" "$STEAM_GAME_ID"
