--- a/.github/workflows/update-vrchat-hours.yaml
+++ b/.github/workflows/update-vrchat-hours.yaml
@@ -2,8 +2,8 @@ name: Update VRChat Hours
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 * * * *' # Runs every hour
+  #schedule:
+   # - cron: '0 * * * *' # Runs every hour
 
 concurrency:
   group: update-vrchat-hours
