--- a/.github/workflows/update-vrchat-hours-v2.yaml
+++ b/.github/workflows/update-vrchat-hours-v2.yaml
@@ -3,7 +3,7 @@ name: Update MyHours v2 (SteamAPI)
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *' # Runs every 1 hour
+    - cron: '0 */2 * * *' # Runs every 1 hour
 
 concurrency:
   group: update-vrchat-hours-v2
