--- a/.github/workflows/user-statistician.yml
+++ b/.github/workflows/user-statistician.yml
@@ -2,7 +2,7 @@ name: user-statistician
 
 on:
   schedule:
-    - cron: '0 3 * * *'
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
@@ -14,5 +14,8 @@ jobs:
 
     - name: Generate the user stats image
       uses: cicirello/user-statistician@v1
+      with:
+        colors: dark
+        include-title: false
       env:
         GITHUB_TOKEN: ${{ secrets.SUMMARY_GITHUB_TOKEN }}
