--- a/.github/workflows/user-statistician.yml
+++ b/.github/workflows/user-statistician.yml
@@ -16,6 +16,6 @@ jobs:
       uses: cicirello/user-statistician@v1
       with:
         colors: dark
-        include-title: false
+        include-title: true
       env:
-        GITHUB_TOKEN: ${{ secrets.SUMMARY_GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.user_statistician }}
