--- a/.github/workflows/user-statistician.yml
+++ b/.github/workflows/user-statistician.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         custom-title: My GitHub Statistics
         colors: dark
-        include-title: false
+        include-title: true
         animated-language-chart: true
       env:
         GITHUB_TOKEN: ${{ secrets.user_statistician }}
